option('tests', type: 'feature', description: 'Build tests')
option('oe-sdk', type: 'feature', description: 'Enable OE SDK')

option('MANIFEST_FILE',
       type: 'string',
       value: 'MANIFEST',
       description: 'The path of the MANIFEST file')

option('SOFTWARE_OBJPATH',
       type: 'string',
       value: '/xyz/openbmc_project/software',
       description: 'The software manager Dbus root')

option('PSU_INVENTORY_PATH',
       type: 'string',
       value: '/xyz/openbmc_project/inventory/system/chassis',
       description: 'The PSU inventory path')

option('PSU_JSON_CONFIG',
       type: 'string',
       value: '/etc/default/obmc/psu/psu.json',
       description: 'The json config for PSU code manager')
